--- a/index.html
+++ b/index.html
@@ -1,84 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
 
-    <!-- Estilização -->
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/componentes.css" />
-    <link rel="stylesheet" href="css/sections/inicio.css" />
-    <link rel="stylesheet" href="css/sections/eventos.css" />
-    <link rel="stylesheet" href="css/sections/localizacao.css" />
+<head>
+  <title>Home</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
 
-    <!-- Ícones -->
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
-    />
+  <!-- Estilização -->
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="css/componentes.css" />
+  <link rel="stylesheet" href="css/sections/inicio.css" />
+  <link rel="stylesheet" href="css/sections/eventos.css" />
+  <link rel="stylesheet" href="css/sections/galeria.css" />
+  <link rel="stylesheet" href="css/sections/localizacao.css" />
+  <link rel="stylesheet" href="css/sections/doar.css" />
 
-    <!-- Frase aleatória da Bíblia -->
-    <script
-      async
-      defer
-      src="https://dailyverses.net/get/random.js?language=arc"
-    ></script>
+  <!-- Ícones -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Scripts -->
-    <script defer src="js/constantes.js"></script>
-    <script defer src="js/frase.js"></script>
-    <script defer src="js/scroll.js"></script>
-    <script defer src="js/menu.js"></script>
-    <script defer src="js/index.js"></script>
-  </head>
-  <body>
-    <main>
-      <nav>
-        <button id="menu" active="0">
-          <span class="material-symbols-outlined">menu</span>
-        </button>
+  <!-- Frase aleatória da Bíblia -->
+  <script async defer src="https://dailyverses.net/get/random.js?language=arc"></script>
 
-        <a class="link-navbar" link="inicio">Início</a>
-        <a class="link-navbar" link="localizacao">Localização</a>
-        <a class="link-navbar" link="eventos">Eventos</a>
-        <a class="link-navbar" link="galeria">Galeria</a>
-        <a class="link-navbar" link="doar">Doações</a>
-      </nav>
+  <!-- Mapa -->
+  <!-- https://leafletjs.com/examples/quick-start/ -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <script defer src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+    integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
-      <div class="secao" id="inicio">
-        <div id="logo"></div>
-        <h1 id="titulo">Comunidade</h1>
-        <span id="frase">
-          <div id="dailyVersesWrapper"></div>
-        </span>
-        <button id="botao-nova-frase">Nova frase</button>
-      </div>
+  <!-- Scripts -->
+  <script defer src="js/constantes.js"></script>
+  <script defer src="js/frase.js"></script>
+  <script defer src="js/scroll.js"></script>
+  <script defer src="js/mapa.js"></script>
+  <script defer src="js/carrossel.js"></script>
+  <script defer src="js/menu.js"></script>
+  <script defer src="js/index.js"></script>
+</head>
 
-      <div class="secao" id="localizacao">
-        <h2>Localização</h2>
-        <div id="horarios">
-          <h3>Horários</h3>
+<body>
+  <main>
+    <nav>
+      <button id="menu" active="0">
+        <span class="material-symbols-outlined">menu</span>
+      </button>
+
+      <a class="link-navbar" link="inicio">Início</a>
+      <a class="link-navbar" link="localizacao">Localização</a>
+      <a class="link-navbar" link="eventos">Eventos</a>
+      <a class="link-navbar" link="galeria">Galeria</a>
+      <a class="link-navbar" link="doar">Doações</a>
+    </nav>
+
+    <div class="secao" id="inicio">
+      <div id="logo"></div>
+      <h1 id="titulo">Comunidade Santo Antônio</h1>
+      <span id="frase">
+        <div id="dailyVersesWrapper"></div>
+      </span>
+      <button id="botao-nova-frase">Nova frase</button>
+    </div>
+
+    <div class="secao" id="localizacao">
+      <h2>Localização</h2>
+      <div id="endereco">
+        <div id="map"></div>
+
+        <div id="texto-endereco">
+          <span>Rua Parambu</span>
+          <span>Nº 560</span>
+          <span>Bairro: Vila Velha</span>
+          <span>Cidade: Fortaleza</span>
+          <span>Estado: CE</span>
+          <span>CEP: 60347-780</span>
         </div>
-        <div id="endereco">
-          <h3>Endereço</h3>
+
+        <div id="lista-horarios">
+          <div class="card-horario">
+            <span>Domingo:</span>
+            <span>Fechado</span>
+          </div>
+          <div class="card-horario">
+            <span>Segunda:</span>
+            <span>Fechado</span>
+          </div>
+          <div class="card-horario">
+            <span>Terça:</span>
+            <span>Fechado</span>
+          </div>
+          <div class="card-horario">
+            <span>Quarta:</span>
+            <span>Fechado</span>
+          </div>
+          <div class="card-horario">
+            <span>Quinta:</span>
+            <span>Fechado</span>
+          </div>
+          <div class="card-horario">
+            <span>Sexta:</span>
+            <span>Fechado</span>
+          </div>
+          <div class="card-horario">
+            <span>Sábado:</span>
+            <span>19:00 às 20:00</span>
+          </div>
         </div>
       </div>
-      <div class="secao" id="eventos">
-        <h2>Eventos</h2>
-        <div class="card-evento"></div>
-        <div class="card-evento"></div>
-        <div class="card-evento"></div>
+    </div>
+    <div class="secao" id="eventos">
+      <h2>Eventos</h2>
+      <div class="card-evento"></div>
+      <div class="card-evento"></div>
+      <div class="card-evento"></div>
+    </div>
+    <div class="secao" id="galeria">
+      <h2>Galeria de fotos</h2>
+      <div id="carrossel-fotos"></div>
+    </div>
+    <div class="secao" id="doar">
+      <h2>Doações</h2>
+      <!-- <div id="dados-pix"></div>
+      <div class="dados-bancarios"></div> -->
+      <div id="dados-doacoes">
+        <p>Caso quiser ajudar com doação de materiais, a comunidade Santo Antônio vai até você!</p>
+        <a href="https://forms.gle/iNMP6DZknYod7eKXA" target="_blank">https://forms.gle/iNMP6DZknYod7eKXA</a>
       </div>
-      <div class="secao" id="galeria">
-        <h2>Galeria de fotos</h2>
-        <div id="carrosel-fotos"></div>
-      </div>
-      <div class="secao" id="doar">
-        <h2>Doações</h2>
-        <div id="dados-pix"></div>
-        <div class="dados-bancarios"></div>
-      </div>
-    </main>
-  </body>
+    </div>
+  </main>
+</body>
+
 </html>
