preencher seções de eventos e de doações

--- a/index.html
+++ b/index.html
@@ -110,9 +110,21 @@
     </div>
     <div class="secao" id="eventos">
       <h2>Eventos</h2>
-      <div class="card-evento"></div>
-      <div class="card-evento"></div>
-      <div class="card-evento"></div>
+      <div class="card-evento">
+        <img src="static/sopao/sopa.jpg"></img>
+        <div id="texto-sopao">
+          <h3>Sopão da comunidade Santo Antônio</h3>
+          <p>Junte-se a nós para compartilhar amor, solidariedade e uma refeição quente no nosso evento especial de
+            Sopão da Comunidade!
+          </p>
+          <p>Venha fortalecer a fé enquanto servimos a todos, acolhendo corações famintos e alimentando
+            esperanças.</p>
+          <p>Todos são bem-vindos, pois é na união que encontramos a bênção da partilha. Não perca essa oportunidade de
+            fazer a diferença e nutrir o corpo e a alma. Esperamos
+            você com um sorriso caloroso e uma tigela cheia de amor.</p>
+          <span>"Ocorre em todo último sábado do mês"</span>
+        </div>
+      </div>
     </div>
     <div class="secao" id="galeria">
       <h2>Galeria de fotos</h2>
@@ -120,11 +132,14 @@
     </div>
     <div class="secao" id="doar">
       <h2>Doações</h2>
-      <!-- <div id="dados-pix"></div>
-      <div class="dados-bancarios"></div> -->
+      <!-- <div class="dados-bancarios"></div> -->
       <div id="dados-doacoes">
         <p>Caso quiser ajudar com doação de materiais, a comunidade Santo Antônio vai até você!</p>
         <a href="https://forms.gle/iNMP6DZknYod7eKXA" target="_blank">https://forms.gle/iNMP6DZknYod7eKXA</a>
+      </div>
+      <div id="dados-pix">
+        <h3>PIX</h3>
+        <img src="static/pix/qrcode_igreja.png"></img>
       </div>
     </div>
   </main>
